tests/baselines/reference/ES5SymbolProperty4.errors.txt
ES5SymbolProperty4.ts(7,9): error TS2454: Variable 'Symbol' is used before being assigned.


==== ES5SymbolProperty4.ts (1 errors) ====
    var Symbol: { iterator: string };
    
    class C {
        [Symbol.iterator]() { }
    }
    
    (new C)[Symbol.iterator]
            ~~~~~~
!!! error TS2454: Variable 'Symbol' is used before being assigned.